# pitch-shift-explore

./: CMakeLists.txt  C_Maj.webm
.zed/: debug.json  tasks.json
src/: Waveform.cpp  Waveform.h  WaveformVisualizer.cpp  WaveformVisualizer.h  main.cpp
